--- a/theme/beamer/tex/latex/wlansi/wlansi.sty
+++ b/theme/beamer/tex/latex/wlansi/wlansi.sty
@@ -1,11 +1,9 @@
 \ProvidesPackage{wlansi}[2012/06/24]
 \RequirePackage{cmap}
-\RequirePackage{ifthen}
 \RequirePackage{type1ec}
 \RequirePackage{concrete}
 
 \usepackage{cmap}
-\usepackage{ifthen}
 \usepackage{type1ec}
 \usepackage{concrete}
 \usepackage[T1]{fontenc}
@@ -68,14 +66,10 @@
 }
 }}
 
-\newcommand{\simpleslideimage}[3][width]{\wrapframe{
+\newcommand{\simpleslideimage}[2]{\wrapframe{
 \begin{center}
-\ifthenelse{\equal{#1}{width}}{
-\includegraphics[width=\pwidth]{#2}}{
-\ifthenelse{\equal{#1}{height}}{
-\includegraphics[height=\pheight]{#2}}{
-\includegraphics{#2}}}
-\\ {\footnotesize #3}
+\includegraphics[width=0.6\paperwidth,height=0.8\paperheight,keepaspectratio]{#1}
+\\ {\footnotesize #2}
 \end{center}}
 }
 
@@ -89,10 +83,4 @@
 \end{frame}
 }
 
-
 \newcommand{\rightfooter}[1]{\vfill\hfill #1}
-
-\newlength{\pheight}
-\newlength{\pwidth}
-\setlength{\pheight}{0.6\paperheight}
-\setlength{\pwidth}{0.6\paperwidth}
